tests/errors/syn_method24.java
public class syn_method24 {
public static int[] main ) {
 
}
}